--- a/data/blog/how-i-ai-studied.mdx
+++ b/data/blog/how-i-ai-studied.mdx
@@ -181,7 +181,7 @@ X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_
 
 4. Обучите модель: Обучите модель линейной регрессии, используя обучающие данные:
 
-```
+```python
 from sklearn.linear_model import LinearRegression
 
 model = LinearRegression()
