Added some usefull MDX Components

--- a/src/content/test-case.mdx
+++ b/src/content/test-case.mdx
@@ -65,3 +65,24 @@ This is an array `[1, 2, 3]{:js}` of numbers 1 through 3.
 ### Highlight plain text
 
 The name of the function is `getStringLength{:.entity.name.function}`.
+
+
+### Callout example
+
+default
+
+<Callout>
+This is a default callout. You can embed **Markdown** inside a `callout`.
+</Callout>
+
+danger
+
+<Callout type='danger'>
+This is a default callout. You can embed **Markdown** inside a `callout`.
+</Callout>
+
+warning
+
+<Callout type='warning'>
+This is a default callout. You can embed **Markdown** inside a `callout`.
+</Callout>
